# ChangeLog for media-video/xine-ui
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/xine-ui/ChangeLog,v 1.66 2004/10/23 03:50:01 chriswhite Exp $

*xine-ui-0.99.3_pre20041022 (23 Oct 2004)

  23 Oct 2004; Chris White <chriswhite@gentoo.org>
  +xine-ui-0.99.3_pre20041022.ebuild:
  Created a cvs snapshot ebuild as per bug #64693. This should help fix a few
  bugs hanging around xine-ui until 0.99.3 gets out.

  05 Oct 2004; Jason Wever <weeve@gentoo.org> xine-ui-0.99.2.ebuild:
  Added ~sparc keyword.

  01 Oct 2004; Patrick Kursawe <phosphan@gentoo.org>
  -xine-ui-0.9.13-r1.ebuild:
  Removing because xline-lib-0.9.13 is outdated.

  28 Jul 2004; Tom Gall <tgall@gentoo.org> xine-ui-0.99.2.ebuild:
  stable (ish) on ppc64, bug #55076

  15 Jul 2004; Chris White <chriswhite@gentoo.org> :
  Version bump to 0.99.2.  Added Diego Petten's updated CFLAGS preserve patch.

  15 Jul 2004; Chris White <chriswhite@gentoo.org> metadata.xml:
  Changing herd to media-video.  Added myself as mantainer.

  29 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> xine-ui-0.99.1.ebuild:
  Marked ~amd64.

*xine-ui-0.99.1 (07 Jun 2004)

  07 Jun 2004; Patrick Kursawe <phosphan@gentoo.org> xine-ui-0.99.1.ebuild,
  files/preserve-CFLAGS-0.99.1.diff:
  Version bump, had to adjust the preserve-cflags patch and remove the
  implicit-config and symlink-bug patches (should be included upstream).

  07 May 2004; Josh Grebe <squash@gentoo.org> xine-ui-0.9.23-r2.ebuild:
  Stable on sparc

  26 Apr 2004; Brandon Hale <tseng@gentoo.org> xine-ui-0.9.23-r2.ebuild:
  Stable on x86.

  26 Apr 2004; David Holm <dholm@gentoo.org> xine-ui-0.9.23-r2.ebuild:
  Stable on ppc.

  19 Apr 2004; Travis Tilley <lv@gentoo.org> xine-ui-0.9.23-r2.ebuild:
  marked stable on amd64

*xine-ui-0.9.23-r2 (19 Apr 2004)

  19 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> xine-ui-0.9.23-r2.ebuild,
  files/implicit-config.patch: